# vision_interfaces

./: CMakeLists.txt  package.xml
msg/: BoundingBox2D.msg  BoundingBox3D.msg  BoundingBox3DArray.msg  Detection.msg  DetectionArray.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  KeyPoint3D.msg  KeyPoint3DArray.msg  Mask.msg  MaskArray.msg  Pose2D.msg
